2004-05-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game.cpp
	  - custom missions are improved: the sub's position is now
	    realistic, the convoy's ships are at the visible border.
	    Now custom missions are useable (if we ignore the suicidal
	    destroyers...)

2004-05-16  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* sea_object, sensor
	  - changed visibility formula and factors.
	    A bit better now, but still not realistic. Added many comments
	    about that.
	* submarine.cpp, game.cpp
	  - torpedoes are created for subs in custom missions now
	  - fixed date creation after period (typo bug)
	* submarine_interface.cpp
	  - view torpedo type info for each torpedo, changed controls layout

2004-05-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim, game
	  - added choice for time period for custom missions
	* date, global_data
	  - removed extra date/time functions in global_data. Now everything
	    that has to do with date/time is handled in class date. The
	    class now holds also the linear time, which makes many thing
	    easier. Also a bug in saving/loading dates was fixed.
	
2004-05-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp
	  - mission descriptions are displayed in the menu
	* widget
	  - new attribute for widget_text: "sunken"
	* submarine
	  - parse and use depths data: scope depth, snorkel depth, alarm depth

2004-05-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* replaced own text file parsing with xml code
	* now missions and descriptions are fully dynamic
	* look at the data files for examples
	* some features are not fully ported or tested yet (look for fixme's)
	* added --mission cmd line param to start missions directly

2004-05-03  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game, user_interface, sky, global_data
	  - got rid of get_day_time() code
	  - computation of sun/moon position now ok
	  - daylight/brightness depends on sun

2004-04-29  Thorsten Jordan  <thorsten_jordan@gmx.de>